# elice-third-project

./: .gitignore  README.md
ai/: README.md  main.py  pyproject.toml  requirements.txt
back/: babel.config.json  index.js  key.json  package.json
back/src/: app.js  app.yaml
back/src/common/: OutsideApi.js  nameCrawling.js  scrapeShopItems.js
back/src/controllers/: aiController.js  boardController.js  catsController.js  commentController.js  dogsController.js  likeController.js  mbtiController.js  shoppingController.js  userController.js
back/src/db/: index.js
back/src/db/schemas/: board.js  cats.js  comment.js  dogs.js  like.js  petMBTI.js  petMbti.js  place.js  user.js  userMBTI.js  userMbti.js
back/src/middlewares/: loginRequired.js  login_required.js  uploadImage.js  validator.js
back/src/routes/: OutsideApiRouter.js  ScrapeShopItemsRouter.js  aiRouter.js  boardRouter.js  catsRouter.js  commentRouter.js  dogsRouter.js  likeRouter.js  mbtiRouter.js  shoppingRouter.js  userRouter.js
back/src/services/: boardService.js  catsService.js  commentService.js  dogsService.js  likeService.js  mbtiService.js  shoppingService.js  userService.js
front/: .gitignore  package-lock.json  package.json
front/public/: index.html
front/src/: App.css  App.js  App.jsx  api.js  index.css  index.js
front/src/pages/: AiPage.js  BoardPage.js  DictPage.js  HomePage.js  HospitalPage.js  LoginPage.js  MapPage.js  MypagePage.js  PostEditorPage.js  PostPage.js  PostingPage.js  Register.js  RegisterPage.js  WalkPage.js
front/src/store/: config.js
(+62 files in other folders)
